[gd_scene load_steps=10 format=3 uid="uid://b0hnyjlv8t2ki"]

[ext_resource type="Script" path="res://Objects/GUI/gui.gd" id="1_gqfuo"]
[ext_resource type="PackedScene" uid="uid://cnk3xv6fvtx5t" path="res://Objects/Console/console.tscn" id="2_qcdrg"]
[ext_resource type="Script" path="res://Objects/GUI/GUI_panel.gd" id="3_ixn6v"]
[ext_resource type="Texture2D" uid="uid://uyipdsugflsm" path="res://Assets/Sprites/GUI Elements/ProgressBar/Under.png" id="4_jagda"]
[ext_resource type="Texture2D" uid="uid://he51s5s6sicu" path="res://Assets/Sprites/GUI Elements/ProgressBar/Progress.png" id="5_wabh2"]
[ext_resource type="Texture2D" uid="uid://7oe48uy43yie" path="res://Assets/Sprites/GUI Elements/Screen_Texture.png" id="6_2t3lh"]
[ext_resource type="AudioStream" uid="uid://daho87cc21plc" path="res://Assets/Sounds/Key Type 2.wav" id="7_cwy3e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss7xu"]
bg_color = Color(1, 0.639216, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.945098, 0.909804, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mqddc"]
texture = ExtResource("6_2t3lh")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqfuo")

[node name="Console" parent="." instance=ExtResource("2_qcdrg")]

[node name="SprinklersButton" type="PanelContainer" parent="." groups=["breakable_panels"]]
layout_mode = 0
offset_left = 984.0
offset_top = 24.0
offset_right = 1105.0
offset_bottom = 136.0
script = ExtResource("3_ixn6v")

[node name="VBoxContainer" type="VBoxContainer" parent="SprinklersButton"]
layout_mode = 2
size_flags_horizontal = 5

[node name="CheckButton" type="Button" parent="SprinklersButton/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_ss7xu")
toggle_mode = true
text = "ðŸ§¯"

[node name="FluxCapacitor" type="PanelContainer" parent="." groups=["breakable_panels"]]
layout_mode = 0
offset_left = 96.0
offset_top = 288.0
offset_right = 334.0
offset_bottom = 472.0
script = ExtResource("3_ixn6v")

[node name="VBoxContainer" type="VBoxContainer" parent="FluxCapacitor"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="FluxCapacitor/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Flux Capacitor"

[node name="Calibrate" type="Button" parent="FluxCapacitor/VBoxContainer"]
layout_mode = 2
text = "Calibrate"

[node name="Revert" type="Button" parent="FluxCapacitor/VBoxContainer"]
layout_mode = 2
text = "Revert"

[node name="Override" type="Button" parent="FluxCapacitor/VBoxContainer"]
layout_mode = 2
text = "Override"

[node name="CryogenicValve" type="PanelContainer" parent="." groups=["breakable_panels"]]
layout_mode = 0
offset_left = 96.0
offset_top = 520.0
offset_right = 373.0
offset_bottom = 700.0
script = ExtResource("3_ixn6v")

[node name="VBoxContainer" type="VBoxContainer" parent="CryogenicValve"]
layout_mode = 2
size_flags_horizontal = 5

[node name="Label" type="Label" parent="CryogenicValve/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Cryogenic Valve"

[node name="Open" type="Button" parent="CryogenicValve/VBoxContainer"]
layout_mode = 2
text = "Open"

[node name="Close" type="Button" parent="CryogenicValve/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="HBoxContainer" type="HBoxContainer" parent="CryogenicValve/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CryogenicValve/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.113725, 0.168627, 0.32549, 1)
text = "Flow:"

[node name="AdjustFlow" type="HSlider" parent="CryogenicValve/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 4.0
tick_count = 5
ticks_on_borders = true

[node name="NeutronOscillator" type="PanelContainer" parent="." groups=["breakable_panels"]]
layout_mode = 0
offset_left = 896.0
offset_top = 464.0
offset_right = 1193.0
offset_bottom = 648.0
script = ExtResource("3_ixn6v")

[node name="VBoxContainer" type="VBoxContainer" parent="NeutronOscillator"]
layout_mode = 2
size_flags_horizontal = 5

[node name="Label" type="Label" parent="NeutronOscillator/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Neutron Oscillator"

[node name="Activate" type="Button" parent="NeutronOscillator/VBoxContainer"]
layout_mode = 2
text = "Activate"

[node name="Deactivate" type="Button" parent="NeutronOscillator/VBoxContainer"]
layout_mode = 2
text = "Deactivate"

[node name="HBoxContainer" type="HBoxContainer" parent="NeutronOscillator/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NeutronOscillator/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.113725, 0.168627, 0.32549, 1)
text = "Frequency:"

[node name="AdjustFrequency" type="HSlider" parent="NeutronOscillator/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 4.0
tick_count = 5
ticks_on_borders = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 72.0
offset_right = 112.0
offset_bottom = 328.0
step = 0.1
value = 100.0
fill_mode = 3
texture_under = ExtResource("4_jagda")
texture_progress = ExtResource("5_wabh2")
tint_progress = Color(3, 3, 3, 1)

[node name="MainScreenContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 8.0
offset_right = 624.0
offset_bottom = 272.0
theme_override_styles/panel = SubResource("StyleBoxTexture_mqddc")

[node name="MainScreenText" type="RichTextLabel" parent="MainScreenContainer"]
self_modulate = Color(3, 3, 3, 1)
layout_mode = 2
bbcode_enabled = true
text = "[color=green]This is green text[/color]
[color=red]This is red text[/color]"
scroll_following = true

[node name="SecondaryScreenContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 632.0
offset_top = 8.0
offset_right = 968.0
offset_bottom = 392.0
theme_override_styles/panel = SubResource("StyleBoxTexture_mqddc")

[node name="SecondaryScreenText" type="RichTextLabel" parent="SecondaryScreenContainer"]
self_modulate = Color(3, 3, 3, 1)
layout_mode = 2
bbcode_enabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cwy3e")
volume_db = -15.0

[connection signal="toggled" from="SprinklersButton/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="FluxCapacitor/VBoxContainer/Calibrate" to="." method="_on_flux_capacitor_calibrate_pressed"]
[connection signal="pressed" from="FluxCapacitor/VBoxContainer/Revert" to="." method="_on_flux_capacitor_revert_pressed"]
[connection signal="pressed" from="FluxCapacitor/VBoxContainer/Override" to="." method="_on_flux_capacitor_override_pressed"]
[connection signal="pressed" from="CryogenicValve/VBoxContainer/Open" to="." method="_on_cryogenic_valve_open_pressed"]
[connection signal="pressed" from="CryogenicValve/VBoxContainer/Close" to="." method="_on_cryogenic_valve_close_pressed"]
[connection signal="drag_ended" from="CryogenicValve/VBoxContainer/HBoxContainer/AdjustFlow" to="." method="_on_adjust_cryogenic_valve_flow_drag_ended"]
[connection signal="pressed" from="NeutronOscillator/VBoxContainer/Activate" to="." method="_on_neutron_oscillator_activate_pressed"]
[connection signal="pressed" from="NeutronOscillator/VBoxContainer/Deactivate" to="." method="_on_neutron_oscillator_deactivate_pressed"]
[connection signal="drag_ended" from="NeutronOscillator/VBoxContainer/HBoxContainer/AdjustFrequency" to="." method="_on_adjust_neutron_oscillator_frequency_drag_ended"]
